# rust-i18n

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extract/: Cargo.toml
crates/extract/src/: generator.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  tr.rs
crates/support/: Cargo.toml
crates/support/src/: backend.rs  lib.rs
src/: lib.rs
