[package]
description = "cargo-i18n tool for the rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-cli"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.0.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
globwalk = "0.9"
indexmap = "2.2"
normpath = "1.2"
rust-i18n-support = { path = "../support", version = "3.0.0" }
rust-i18n-extract = { path = "../extract", version = "3.0.0" }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
