[package]
description = "Macro for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-macro"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
once_cell = "1"
proc-macro2 = "1"
quote = "1"
rust-i18n-support = { path = "../support", version = "3.0.0" }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
rust-i18n = { path = "../.." }

[lib]
proc-macro = true

[features]
log-miss-tr = []
