[package]
description = "Support for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-support"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.0.1"

[dependencies]
arc-swap = "1"
base62 = "2"
globwalk = "0.9"
itertools = "0.12"
once_cell = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
siphasher = "1"
toml = "0.8"
normpath = "1"
lazy_static = "1"
regex = "1"
triomphe = { version = "0.1", features = ["arc-swap"] }
